--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://estebandelcid.github.io/react-practico"
+  "homepage": "https://estebandelcid.github.io/react-practico/"
 }
